--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div class="container">
 						<ul class="actions">
 							<li><a href="https://github.com/Gab-182" class="button style3 small">Github</a></li>
-							<li><a href="https://github.com/Gab-182" class="button style3 small">CV</a></li>
+							<li><a href="assets/Ghaiath_Abdoush_CV.pdf" class="button style3 small">CV</a></li>
 							<li><a href="https://www.linkedin.com/in/ghaiath-abdoush/" class="button style3 small">Linkedin</a></li>
 						</ul>
 				</section>
