Editing the footer for all the pages

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										<section>
 											<h3 class="icon solid fa-envelope">Email</h3>
 											<p>
-												<a href="#">Ghaiath.Abdoush@gmail.com</a>
+												Ghaiath.Abdoush@gmail.com</a>
 											</p>
 										</section>
 									</div>
