--- a/work.html
+++ b/work.html
@@ -174,52 +174,14 @@
 				</section>
 
 			<!-- Footer -->
-			<section id="footer" class="wrapper">
-				<div class="container">
-					<div class="row">
-						<div class="col-12">
-							<!-- Contact -->
-							<section class="feature-list small">
-								<div class="row">
-									<div class="col-3">
-										<section>
-											<h3 class="icon solid fa-map-marker-alt">Address</h3>
-											<p>
-												United Arab Emirates<br>
-												Abu Dhabi
-											</p>
-										</section>
-									</div>
-									<div class="col-3">
-										<section>
-											<h3 class="icon brands fa-github">Contact me</h3>
-											<p>
-												<a href="https://github.com/Gab-182">Github</a><br>
-												<a href="https://www.linkedin.com/in/ghaiath-abdoush">LinkedIn</a>
-											</p>
-										</section>
-									</div>
-									<div class="col-3">
-											<h3 class="icon solid fa-envelope">Email</h3>
-											<p>Ghaiath.Abdoush@gmail.com</p>
-									</div>
-									<div class="col-3">
-											<h3 class="icon solid fa-phone-alt">Phone</h3>
-											<p>(+971) 52 571-0052</p>
-									</div>
-								</div>
-							</section>
-						</div>
-					</div>
-					<div id="copyright">
-						<ul>
-							<li>&copy; Gab</li>
-							<li>Design: <a href="https://github.com/Gab-182">Gab</a></li>
-						</ul>
-					</div>
+			<section id="footer">
+				<div id="copyright">
+					<ul>
+						<li>&copy; Gab</li>
+						<li>Design: <a href="https://www.linkedin.com/in/ghaiath-abdoush/">Gab-182</a></li>
+					</ul>
 				</div>
 			</section>
-
 
 		</div>
 
