--- a/work.html
+++ b/work.html
@@ -41,68 +41,35 @@
 									<div id="content">
 										<article class="box post">
 											<header class="style1">
-												<h2>Lorem ipsum dolor sit amet magna egestas morbi bibendum sed malesuada</h2>
-												<p>Tempus feugiat veroeros sed nullam dolore</p>
+												<h2>My work experience explained as</h2>
+												<p>The Journey of Growth and Learning</p>
 											</header>
-											<a href="#" class="image featured">
-												<img src="images/pic01.jpg" alt="" />
-											</a>
-											<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-											odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-											facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-											tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-											<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-											bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-											lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-											Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-											magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
-											<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-											ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-											eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-											eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-											tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-											odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-											facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-											tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-											posuere cubilia.</p>
-											<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-											bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-											lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-											Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-											magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
+
+											<p>I embarked on my professional journey as an agriculture engineer in Beirut, Lebanon, dedicating almost four years to working
+												with a reputable company that provided vital plant pesticide protection to local farmers. This experience allowed me to
+												understand the importance of leveraging technology to enhance efficiency and productivity. <br>
+												<br>
+												Driven by a passion for programming and software development, I transitioned into the world of technology. As a freelancer,
+												I collaborated with a civil engineering company, where I developed a program using Python ,tkinter and other python
+												libraries. This software simplified the calculation of building base dimensions, empowering engineers with a
+												user-friendly tool.<br>
+												<br>
+												My journey in technology continued to unfold as I delved into web development. Equipped with a solid foundation in HTML,
+												CSS, and JavaScript, I took on freelance projects as a front-end web developer, crafting visually appealing and functional
+												websites for clients in Dubai and Abu Dhabi.<br>
+												<br>
+												The ever-evolving landscape of technology led me to explore the exciting realm of blockchain. Eager to embrace this
+												cutting-edge technology, I joined a boot camp focused on Solana blockchain. This immersive experience equipped me with
+												the skills to create a platform within the Solana ecosystem, facilitating seamless and secure donation campaigns for
+												various entities.<br>
+												<br>
+												Currently, my passion lies in the realm of machine learning algorithms, AI, and data science. With a thirst for knowledge,
+												I am actively pursuing courses to expand my expertise in these areas. My ultimate aspiration is to channel my skills and
+												passion into a role that allows me to contribute to the field of AI and data science, making a meaningful impact with my
+												work.<br>
+												As I continue to grow and evolve, I eagerly anticipate the next chapter of my career, where I can apply my diverse skill 
+												set and drive innovation in the field of machine learning and AI.</p>
 										</article>
-										<div class="row gtr-150">
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<header>
-														<h2>Magna pulvinar tempus</h2>
-													</header>
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-													tempus.</p>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<header>
-														<h2>Magna pulvinar tempus</h2>
-													</header>
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-													tempus.</p>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-										</div>
 									</div>
 
 							</div>
@@ -112,58 +79,23 @@
 									<div id="sidebar">
 										<section class="box">
 											<header>
-												<h2>Ipsum nullam luctus</h2>
-											</header>
-											<p>Malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
-											<a href="#" class="button style1">Learn More</a>
-										</section>
-										<section class="box">
-											<header>
-												<h2>Vitae turpis consequat</h2>
+												<h2>Projects i am proud of :</h2>
 											</header>
 											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/pic08.jpg" alt="" /></a>
-														<h3><a href="#">Diam odio lorem</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
+														<a href="https://github.com/Gab-182/solana-donation-platform" class="image left"><img src="images/donation.png" alt="donation platform" /></a>
+														<h3><a href="https://github.com/Gab-182/solana-donation-platform">Donation Platform</a></h3>
+														<p>Donation platform and smart contract for solana donation platform...</p>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/pic09.jpg" alt="" /></a>
-														<h3><a href="#">Sed duis consequat</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
+														<a href="https://github.com/Gab-182/CKD_PREDICT" class="image left"><img src="images/ckd.png" alt="CKD" /></a>
+														<h3><a href="https://github.com/Gab-182/CKD_PREDICT">CKD Prediction</a></h3>
+														<p>an application that leverages the insights from data and helps doctors predict the impending occurrence of CKD early on...</p>
 													</article>
 												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/pic10.jpg" alt="" /></a>
-														<h3><a href="#">Tellus nulla volutpat</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-											</ul>
-											<a href="#" class="button style1">Archives</a>
-										</section>
-										<section class="box">
-											<header>
-												<h2>Magna diam vehicula</h2>
-											</header>
-											<ul class="style3">
-												<li><a href="#">Nulla iaculis egestas varius</a></li>
-												<li><a href="#">Augue massa feugiat quam pretium</a></li>
-												<li><a href="#">Orci sem vel libero cras nisi odio</a></li>
-												<li><a href="#">Sed hendrerit massa nam mattis</a></li>
-												<li><a href="#">Turpis vel leo accumsan aliquet</a></li>
-												<li><a href="#">Dapibus mi fermentum fusce non</a></li>
-												<li><a href="#">Arcu laoreet sapien tempus</a></li>
-												<li><a href="#">Nulla iaculis egestas varius</a></li>
-												<li><a href="#">Augue massa feugiat quam pretium</a></li>
-												<li><a href="#">Orci sem vel libero cras nisi odio</a></li>
-												<li><a href="#">Sed hendrerit massa nam mattis</a></li>
 											</ul>
 										</section>
 									</div>
