fixing service id

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				event.preventDefault();
 				btn.value = 'Sending...';
 
-				const serviceID = 'e06oiuEFZL52Z1A03';
+				const serviceID = 'service_9col5ms';
 				const templateID = 'template_yob222g';
 				// Collect form data
 				var formData = {
