--- a/index.html
+++ b/index.html
@@ -171,25 +171,23 @@
 			<script src="assets/js/main.js"></script>
 
 			<!-- Send Email Script -->
-			<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-			<script>
-			  emailjs.init("e06oiuEFZL52Z1A03");
+			<script type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+		  
+		  <script type="text/javascript">
+			emailjs.init('e06oiuEFZL52Z1A03')
 			  const btn = document.getElementById('btn');
-			  console.log(btn)
 			  function handleForm(event) {
 				event.preventDefault();
 				btn.value = 'Sending...';
 
-				const serviceID = 'service_9col5ms';
 				const templateID = 'template_yob222g';
-				// Collect form data
 				var formData = {
 				  name: document.getElementById('contact-name').value,
 				  email: document.getElementById('contact-email').value,
 				  message: document.getElementById('contact-message').value
 				};
-		  
-				emailjs.sendForm(serviceID, templateID, formData)
+				emailjs.sendForm(default_service, templateID, formData)
 				  .then(function(response) {
 					  alert("Email sent successfully!");
 					  btn.value = 'Send Email';
