adding the pub key for emailjs

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 	<script type="text/javascript">
-		emailjs.init({ user_id: 'e06oiuEFZL52Z1A03' });
+		emailjs.init('e06oiuEFZL52Z1A03');
 	</script>
 	<script>
 		const handleForm = async () => {
